--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <img
       src="https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/front-end-web-development/todo-app-bot.png"
     />
+    <button id="reset">RESET</button>
     <div class="container">
       <div class="form">
         <input type="text" id="input" />
